Añado archivos para correr los tests sobre la segunda practica 	Fichero ruby para el test 	Añado codigo al Makefile para que ejecute el anterior archivo

--- a/Deepspace/Makefile
+++ b/Deepspace/Makefile
@@ -8,6 +8,12 @@ help:
 		@echo "	make check: checks for marks on the code"
 check: ./utilities/check
 		@./utilities/check
-test: ./test/test_p1.rb
-		@echo "Running game test!"
+test: ./test/test_p1.rb ./test/test_p2.rb
+		@echo "Running test no 1" 
+		@echo "================================================================================"
 		@./test/test_p1.rb
+		@echo ""
+		@echo "Running test no 2"
+		@echo "================================================================================"
+		@./test/test_p2.rb
+
