Añado mas contenido al makefile

--- a/Deepspace/Makefile
+++ b/Deepspace/Makefile
@@ -9,6 +9,8 @@ help:
 		@echo "	make tests: runs all tests over the game"
 		@echo "	make test1: runs fist test over the game"
 		@echo "	make test2: runs second test over the game"
+		@echo "	make test3: runs third test over the game"
+		@echo "	make run: runs the main game"
 
 check: ./utilities/check
 		@./utilities/check
@@ -21,6 +23,9 @@ tests: ./test/test_p1.rb ./test/test_p2.rb
 		@echo "Running test no 2"
 		@echo "================================================================================"
 		@./test/test_p2.rb
+		@echo "Running test no 3"
+		@echo "================================================================================"
+		@./test/test_p3.rb
 
 test1: ./test/test_p1.rb
 		@echo "Running test no 1" 
@@ -31,3 +36,12 @@ test2: ./test/test_p2.rb
 		@echo "Running test no 2"
 		@echo "================================================================================"
 		@./test/test_p2.rb
+
+test3: ./test/test_p3.rb
+		@echo "Running test no 3"
+		@echo "================================================================================"
+		@./test/test_p3.rb
+
+run: ./lib/PlayWithUI.rb
+		@echo "Executing main game!"
+		@ruby ./lib/PlayWithUI.rb
