--- a/deepspace/nbproject/project.properties
+++ b/deepspace/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=deepspace
-main.class=DeepspaceGUI.DeepspaceGUI
+main.class=main.PlayWithGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
